Python 3 support(Default)
With some other improvements like:
- Ability to use custom Python path using -p|--python with -n|--new (issue: #6)
- Confirm delete operation before deleting a virtual environment
- Using Local namespace for variables to avoid conflict with environmental vars.

Resolves: #8

Signed-off-by: Sachin Patil <psachin@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-02-16  Sachin Patil  <psachin@redhat.com>
+
+	* Python 3 support
+
 2016-03-14  Sachin  <psachin@redhat.com>
 
 	* Independent repo
@@ -9,4 +13,3 @@
 2014-04-25  Sachin  <iclcoolster@gmail.com>
 
 	* TAB completion
-
